--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+@media screen and (max-width: 480px) {}
 
 h1, h2{
     background-color: #E6DCD0 ;
@@ -62,5 +62,10 @@ strong{ margin-left: 5px;
     color: #51122F;
 }
 a{ text-decoration: none;}
+li ul {    color: #51122F ;
+    font-size: 25px;
+    text-align: center;
+    font-style: oblique;}
+
 
 
