--- a/style.css
+++ b/style.css
@@ -70,14 +70,12 @@ ul {    color: #520d2d ;
         .imginicio, .clik{
             display: flex;
             justify-content: center;
-            height: 400px;
-            width: 400px;
+            height: 200px;
+            width: 200px;
         }
         .clik {
             color: #51122F; 
-            font-size: 20px;
+            font-size: 15px;
+            margin-top: 60px;
         }
     }
-
-
-
