--- a/style.css
+++ b/style.css
@@ -78,4 +78,7 @@ ul {    color: #520d2d ;
             font-size: 15px;
             margin-top: 60px;
         }
+        .imginicio{
+            margin-top: 80px;
+        }
     }
