--- a/style.css
+++ b/style.css
@@ -86,5 +86,6 @@ ul {    color: #520d2d ;
         .galeria1{
             display: flex;
             flex-direction: column;
+            margin-left: 10px;
         }
     }
