--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ ul {    color: #520d2d ;
             display: flex;
             flex-direction: column;
         }
-        .fotosantu1{ height: 6cm;
+        .fotosantu{ height: 6cm;
         width: 6cm;}
     }
 
