--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 h1, h2{
     background-color: #E6DCD0 ;
     color:fuchsia ;
@@ -82,7 +84,7 @@ ul {    color: #520d2d ;
         }
     }
 
- @media (max-width: 600px){
+    @media (max-width: 600px){
         .galeria1{
             display: flex;
             flex-direction: column;
@@ -90,6 +92,10 @@ ul {    color: #520d2d ;
         .fotosantu{ height: 6cm;
         width: 6cm;}
     }
+
+.parrafo14 {
+    color: fuchsia;
+}
 
 
 .parrafo14 {
